2009-07-11  Paolo Bonzini  <bonzini@gnu.org>

	* expmed.c (emit_store_flag_1): Fix choice of zero vs. sign extension.

2009-07-10  DJ Delorie  <dj@redhat.com>

	* config/mep/mep.c (mep_can_inline_p): Correct logic, and simplify.

2009-07-10  Mark Mitchell  <mark@codesourcery.com>

	* config/arm/thumb2.md (thumb2_cbz): Correct computation of length
	attribute.
	(thumb2_cbnz): Likewise.

2009-07-10  David Daney  <ddaney@caviumnetworks.com>

	PR target/39079
	* config.gcc (supported_defaults): Add synci.
	(with_synci): Add validation.
	(all_defaults): Add synci.
	* config/mips/mips.md (clear_cache): Use TARGET_SYNCI instead of
	ISA_HAS_SYNCI.
	(synci): Same.
	* config/mips/mips.opt (msynci): New option.
	* config/mips/mips.c (mips_override_options): Warn on use of
	-msynci for targets that do now support it.
	* gcc/config/mips/mips.h (OPTION_DEFAULT_SPECS): Add a default for
	msynci.
	* gcc/doc/invoke.texi (-msynci): Document the new option.
	* doc/install.texi (--with-synci): Document the new option.

2009-07-10  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/40496
	* tree-ssa-loop-manip.c (tree_transform_and_unroll_loop): Create
	the PHI result with a compatible type.

2009-07-10  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR 25509
	PR 40614
	* c.opt (Wunused-result): New.
	* doc/invoke.texi: Document it.
	* c-common.c (c_warn_unused_result): Use it.

2009-07-09  DJ Delorie  <dj@redhat.com>

	* targhooks.c (default_target_can_inline_p): Rename from
	default_target_option_can_inline_p.
	* targhooks.h (default_target_can_inline_p): Likewise.
	* target-def.h (TARGET_CAN_INLINE_P): Rename from
	TARGET_OPTION_CAN_INLINE_P.
	* config/i386/i386.c (TARGET_CAN_INLINE_P): Likewise.
	* config/mep/mep.c (TARGET_CAN_INLINE_P): Likewise.
	(mep_target_can_inline_p): Rename from
	mep_target_option_can_inline_p.

	PR target/40626
	* config/mep/mep.h (FUNCTION_ARG_REGNO_P): Add coprocessor
	registers used to pass vectors.
