@@ -1,3 +1,8 @@
+2009-07-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/40668
+	* gcc.c-torture/execute/pr40668.c: New test.
+
 2009-07-11  Paolo Bonzini  <bonzini@gnu.org>
 
 	* gcc.c-torture/execute/20090711-1.c: New test.
