@@ -1,3 +1,10 @@
+2009-07-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/40668
+	* function.c (assign_parm_setup_stack): Adjust
+	MEM_OFFSET (data->stack_parm) if promoted_mode is different
+	from nominal_mode on big endian.
+
 2009-07-11  Paolo Bonzini  <bonzini@gnu.org>
 
 	* expmed.c (emit_store_flag_1): Fix choice of zero vs. sign extension.
